# abidex

./: .gitignore  CLI_ARCHITECTURE.md  CLI_USAGE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  QUERY_GUIDE.md  README.md  abidex.json  agent_analysis_20251106_180406.csv  agent_analysis_20251106_210203.csv  agent_summary_20251106_180406.json  agent_summary_20251106_210203.json  fraud_detection_analysis.ipynb  fraud_detection_pipeline.py  pyproject.toml  requirements-dev.txt  setup.py  simple_agent_test.py  workflows.json
.github/workflows/: publish.yml
abide_agentkit/: __init__.py  cli.py  client.py  instrumentation.py  logger.py  spans.py
abide_agentkit/adapters/: claude_adapter.py  crew_adapter.py  n8n_adapter.py
abide_agentkit/collectors/: __init__.py  http_collector.py
abide_agentkit/sinks/: __init__.py  jsonl_sink.py  prometheus_sink.py
abide_agentkit/utils/: redaction.py  token_counter.py
abidex/: __init__.py  cli.py  cli_common.py  client.py  collector_main.py  config.py  eval_main.py  instrumentation.py  log_patterns.py  logger.py  otel_client.py  spans.py  weather.py
abidex/adapters/: __init__.py  claude_adapter.py  crew_adapter.py
abidex/collectors/: __init__.py  http_collector.py
abidex/sinks/: http_sink.py  jsonl_sink.py
abidex/utils/: __init__.py  id_utils.py
abidex/workflows/: __init__.py  cli_helpers.py  commands.py  discovery.py  paths.py  registry.py
docs/: configuration.md  crewai.md  frameworks.md  integration-and-testing.md  logs.md  troubleshooting.md
documentation/: AUTO_DISCOVERY_FEATURE.md  CLI_ARCHITECTURE.md  CLI_USAGE.md  draft.md
examples/: crewai_integration_test.py  crewai_simple.py  enhanced_usage.py  fraud_detection_pipeline.py  langgraph_integration_test.py  pydantic_ai_integration_test.py  signoz-quickstart.md  structured_schema_demo.py  test-with-signoz.py  test_agent_logging.py  uptrace-quickstart.md
examples/notebooks/: agent_logs_analysis.ipynb
src/abidex/: __init__.py  cli.py  config.py  core.py  log_buffer.py  log_setup.py  otel_setup.py  trace_buffer.py
src/abidex/patches/: __init__.py  autogen_stub.py  crewai.py  langgraph.py  llama_index.py  llamaindex_stub.py  n8n_sdk_python.py  pydantic_ai.py
tests/: conftest.py  test_cli_helpers.py  test_config.py  test_crew_adapter_cli.py  test_crewai_basic.py  test_detection.py  test_event_serialization.py  test_log_patterns.py  test_otel_setup.py  test_patching.py  test_pydantic_ai_patch.py  test_workflow_discovery.py  test_workflow_paths.py
