[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abidex"
version = "0.1.0"
description = "Zero-code OpenTelemetry tracing for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{ name = "Abide", url = "https://github.com/abide-ai" }]
keywords = [
    "opentelemetry",
    "observability",
    "agents",
    "crewai",
    "langgraph",
    "pydantic-ai",
    "genai",
    "tracing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "typer[all]>=0.12.4",
    "rich>=13.0.0",
]

[project.optional-dependencies]
otlp = [
    "opentelemetry-exporter-otlp-proto-grpc>=1.22.0",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
abidex = "abidex.cli:app"

[project.urls]
Repository = "https://github.com/abide-ai/abidex"
Homepage = "https://github.com/abide-ai/abidex"
Documentation = "https://github.com/abide-ai/abidex#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/abidex"]

[tool.hatch.build.targets.sdist]
include = [
    "src/abidex",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = ["tests", "examples", ".git"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
